--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "talkjs": "^0.14.3"
   }
 }
