--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
     "boxicons": "^2.0.7",
+    "buefy": "^0.9.4",
     "core-js": "^3.8.3",
     "nuxt": "^2.15.1",
     "nuxt-buefy": "^0.4.4",
