--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "nuxt-buefy": "^0.4.4",
-    "vee-validate": "^3.4.5"
+    "vee-validate": "^3.4.5",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^5.0.0",
