--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vue": "^7.5.0",
     "lodash": "^4.17.21",
     "prettier": "^2.2.1",
-    "talkjs": "^0.14.3"
+    "talkjs": "^0.14.3",
+    "vue-infinite-loading": "^2.4.5"
   }
 }
