--- a/vercel.json
+++ b/vercel.json
@@ -9,16 +9,37 @@
       }
     }
   ],
-  "routes": [
-    { "src": "/_nuxt/.+", "headers": { "Cache-Control": "max-age=31557600" } },
+  "headers": [
     {
-      "src": "/sw.js",
-      "dest": "/_nuxt/static/sw.js",
-      "headers": {
-        "cache-control": "public, max-age=43200, immutable",
-        "Service-Worker-Allowed": "/"
-      }
+      "source": "/_nuxt/(.+)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "max-age=31557600"
+        }
+      ]
     },
-    { "src": "/(.*)", "dest": "/" }
+    {
+      "source": "/(.+)\\.(png|jpg|jpeg|ico|txt)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31557600"
+        }
+      ]
+    },
+    {
+      "source": "/sw.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=43200, immutable"
+        },
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
+        }
+      ]
+    }
   ]
 }
