--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
+    "js-sha256": "^0.9.0",
     "lodash": "^4.17.21",
     "prettier": "^2.2.1",
     "talkjs": "^0.14.3",
