--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "js-sha256": "^0.9.0",
     "lodash": "^4.17.21",
     "prettier": "^2.2.1",
+    "pusher-js": "^7.0.3",
     "talkjs": "^0.14.3",
     "vue-cropperjs": "4.2.0",
     "vue-infinite-loading": "^2.4.5"
